# Rosario-Burletes

./: 111.csv  222.csv  DEV.md  ESTRATEGIA.md  README.md  RELOJ ABRIL 2025.csv  RELOJ JUNIO 2025.csv  Sin título 1.csv  Sin título 2.csv  TESTING.md  Untitled0.ipynb  docker-compose.yml  perfil e.csv  recordatorios_vf.ipynb  todas gomas.csv
app/: .gitignore  README.md  next.config.ts  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/dashboard/: layout.tsx  page.tsx
app/app/login/: page.tsx
app/components/: Sidebar.tsx
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  deps.py  main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  customer.py  invoice.py  product.py  production.py  tenant.py  user.py  whatsapp.py
backend/app/routers/: auth.py  customers.py  dashboard.py  invoices.py  production.py  products.py  whatsapp.py
backend/app/schemas/: auth.py  common.py
backend/app/services/: afip.py  ai.py  whatsapp.py
backend/scripts/: seed.py
backend/tests/: test_health.py
docs/: ESTRATEGIA.md  MARKETING.md  PRICING.md  PRODUCTO.md  STACK.md
docs/pitch/: README.md  parana.md
landing/: .gitignore  README.md  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: CaseStudy.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Nav.tsx  Pricing.tsx  Problem.tsx  Solution.tsx  Waitlist.tsx
scripts/: bootstrap.sh
(+9 files in other folders)
